--- a/web.css
+++ b/web.css
@@ -155,6 +155,15 @@ body {
     background-color: lightgray;
 }
 
+#volumeUp {
+
+}
+#volumeDonw {
+
+}
+
+
+
 #progress {
     position: relative;
     width: 70%;
